// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image Upload render function Add image 1`] = `
<ImageUpload
  onFile={[Function]}
  previewImage="data:image/gif;base64,R0lGODlhAQABAIAAAP///////yH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
>
  <div
    className="image-upload undefined"
  >
    <div
      className="image-upload--zone position-relative"
      style={
        Object {
          "height": "150px",
          "overflow": "hidden",
          "width": "150px",
        }
      }
    >
      <div>
        <img
          alt="User profile"
          className="preview-img w-100"
          src="data:image/gif;base64,R0lGODlhAQABAIAAAP///////yH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
          style={
            Object {
              "opacity": 1,
            }
          }
        />
      </div>
      <div
        className="droppable-image-overlay"
      />
    </div>
    <div
      style={
        Object {
          "clear": "both",
        }
      }
    />
    <UploadButton
      className="mt-2"
      readFiles={[Function]}
    >
      <label
        className="mt-2"
      >
        <Button
          Tag="span"
          size="medium"
          type="tertiary"
        >
          <span
            className=" btn Button Button__tertiary Button__medium"
          >
            <Icon
              className="align-middle"
              name="photo"
            >
              <i
                className="material-icons material-icons-photo align-middle"
              >
                photo
              </i>
            </Icon>
            <span
              className="align-middle ml-2"
            >
              Upload billede
            </span>
          </span>
        </Button>
        <input
          accept="image/png, image/jpeg"
          className="droppable-image-field--file-input"
          onChange={[Function]}
          type="file"
        />
      </label>
    </UploadButton>
    <Error />
  </div>
</ImageUpload>
`;

exports[`Image Upload render function Add preview image 1`] = `
<div
  className="image-upload undefined"
>
  <div
    className="image-upload--zone position-relative"
    style={
      Object {
        "height": "150px",
        "overflow": "hidden",
        "width": "150px",
      }
    }
  >
    <div>
      <img
        alt="User profile"
        className="preview-img w-100"
        onLoad={undefined}
        src="data:image/gif;base64,R0lGODlhAQABAIAAAP///////yH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
        style={
          Object {
            "opacity": 1,
          }
        }
      />
    </div>
    <div
      className="droppable-image-overlay"
    >
      
    </div>
  </div>
  <div
    style={
      Object {
        "clear": "both",
      }
    }
  />
  <label
    className="mt-2"
    style={undefined}
  >
    <span
      className=" btn Button Button__tertiary Button__medium"
    >
      <i
        className="material-icons material-icons-photo align-middle"
      >
        photo
      </i>
      <span
        className="align-middle ml-2"
      >
        Upload billede
      </span>
    </span>
    <input
      accept="image/png, image/jpeg"
      className="droppable-image-field--file-input"
      name={undefined}
      onChange={[Function]}
      type="file"
    />
  </label>
</div>
`;

exports[`Image Upload render function Add spinner on loading 1`] = `
<div
  className="image-upload undefined"
>
  <div
    className="image-upload--zone position-relative"
    style={
      Object {
        "height": "150px",
        "overflow": "hidden",
        "width": "150px",
      }
    }
  >
    <Spinner
      size="50px"
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "margin": "auto",
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <div
      className="d-flex align-items-center justify-content-center h-100 "
    >
      <i
        className="material-icons"
        style={
          Object {
            "fontSize": 100,
          }
        }
      >
        image
      </i>
    </div>
    <div
      className="droppable-image-overlay"
    >
      
    </div>
  </div>
  <div
    style={
      Object {
        "clear": "both",
      }
    }
  />
  <label
    className="mt-2"
    style={undefined}
  >
    <span
      className=" btn Button Button__tertiary Button__medium"
    >
      <i
        className="material-icons material-icons-photo align-middle"
      >
        photo
      </i>
      <span
        className="align-middle ml-2"
      >
        Upload billede
      </span>
    </span>
    <input
      accept="image/png, image/jpeg"
      className="droppable-image-field--file-input"
      name={undefined}
      onChange={[Function]}
      type="file"
    />
  </label>
</div>
`;

exports[`Image Upload render function renders an image upload form 1`] = `
<div
  className="image-upload undefined"
>
  <div
    className="image-upload--zone position-relative"
    style={
      Object {
        "height": "150px",
        "overflow": "hidden",
        "width": "150px",
      }
    }
  >
    <div
      className="d-flex align-items-center justify-content-center h-100 "
    >
      <i
        className="material-icons"
        style={
          Object {
            "fontSize": 100,
          }
        }
      >
        image
      </i>
    </div>
    <div
      className="droppable-image-overlay"
    >
      
    </div>
  </div>
  <div
    style={
      Object {
        "clear": "both",
      }
    }
  />
  <label
    className="mt-2"
    style={undefined}
  >
    <span
      className=" btn Button Button__tertiary Button__medium"
    >
      <i
        className="material-icons material-icons-photo align-middle"
      >
        photo
      </i>
      <span
        className="align-middle ml-2"
      >
        Upload billede
      </span>
    </span>
    <input
      accept="image/png, image/jpeg"
      className="droppable-image-field--file-input"
      name={undefined}
      onChange={[Function]}
      type="file"
    />
  </label>
</div>
`;
